--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev --name init",
-    "prisma:seed": "prisma db seed"
+    "prisma:seed": "prisma db seed",
+    "db:test": "node -e \"require('./src/lib/db.js').testConnection()\""
   },
   "prisma": {
     "seed": "node prisma/seed.js"
